--- a/antenne/filiformi.tex
+++ b/antenne/filiformi.tex
@@ -225,3 +225,15 @@ Ricaviamo ora i parametri d'antenna trovati sia per il dipolo elementare che per
         R_o = \frac{2 P_0}{\left |I_A \right |^{2}} = \frac{2}{\left |I_A \right |^{2}} \int_{\frac{-L}{2}}^{\frac{L}{2}} r_f \frac{\left |I(z) \right |^{2}}{2}dz'
       \end{equation}
 \end{itemize}
+
+\section{Antenne a lunghezza maggiore di $\frac{\lambda}{2}$}
+Per le antenne filiformi con lunghezza superiore a mezza lunghezza d'onda si hanno le caratteristiche elencate nella seguente tabella.
+\begin{table}[hb!]
+\centering
+\begin{tabular}{cc}
+Lunghezza d'antenna(L) & Note\\
+$\frac{3}{4}\lambda$      & Non ha un'impedenza d'ingresso "standard"\\
+$\lambda$                 & $Z_A \to +\infty$. Difficile da adattare \\
+$>\lambda$                & \parbox{7cm}{Si introducono lobi secondari: l'antenna non irradia più come una sfera}
+\end{tabular}
+\end{table}
