Commit fine giornata. sistemata formattazione potenziale vettore magnetico sistemato in parte dipolo corto #TODO fatte antenne su piano conduttore fino ILA. manca yagi uda fino a prima schiere

--- a/antenne/antenne.tex
+++ b/antenne/antenne.tex
@@ -187,8 +187,9 @@
 \input{onde_piane.tex}
 \input{antenne_cap.tex}
 \input{filiformi.tex}
+\input{antenneSuPianoCond.tex}
 \input{array.tex}
 \input{patch.tex}
-\appendix
-\input{appendici.tex}
+% \appendix
+% \input{appendici.tex}
 \end{document}
