--- a/network_modeling/gbn_analysis.tex
+++ b/network_modeling/gbn_analysis.tex
@@ -191,7 +191,7 @@ Given a three-state system $x(t) = i,j,k$, we want to reduce it to a two-state s
 	\end{tikzpicture}
 \end{center}
 
-$$ \Psi_{ij}(s) = \sum_{A \in \epsilon(i,j)} P[A] \cdot \underline{S}[A] \qquad \Psi_{jk}(s) = \sum_{B \in \epsilon(j,k)} P[B] \cdot \underline{S}[B]$$
+$$ \Psi_{ij}(s) = \sum_{A \in \epsilon(i,j)} P[A] \cdot \mathbf{S}[A] \qquad \Psi_{jk}(s) = \sum_{B \in \epsilon(j,k)} P[B] \cdot \mathbf{S}[B]$$
 
 Using the assumption made before, we can reduce the above system to a two-state system with the product of the transition probabilities $\Psi_{ij}(s)$ and $\Psi_{jk}(s)$ as transition probability.
 
@@ -206,7 +206,7 @@ Using the assumption made before, we can reduce the above system to a two-state 
 	\end{tikzpicture}
 \end{center}
 
-$$ \Psi_{ik}(s) = \Psi_{ij}(s) \cdot \Psi_{jk}(s) = \sum_{A \in \epsilon(i,j), B \in \epsilon(j.k)} P[A] \cdot P[B] \cdot \underline{S}[A] \cdot \underline{S}[A]$$
+$$ \Psi_{ik}(s) = \Psi_{ij}(s) \cdot \Psi_{jk}(s) = \sum_{A \in \epsilon(i,j), B \in \epsilon(j.k)} P[A] \cdot P[B] \cdot \mathbf{S}[A] \cdot \underline{S}[A]$$
 
 What if we are in the following situation?
 
@@ -390,15 +390,15 @@ Expanding the transition probabilities in \autoref{fig:gbn_mc_1state}, we have:
 \end{equation}
 
 In the follows, we compute the throughput of \autoref{fig:gbn_mc_complete} and of its semplifications.
-We start from the 1-state system, analyzing the derivative of the different metrics assuming $\underline{s} = 1$.
+We start from the 1-state system, analyzing the derivative of the different metrics assuming $\mathbf{s} = 1$.
 
 \begin{equation}\label{eq:av_succ_gbn}
-	\frac{\partial B}{\partial s_1}\bigg|_{\underline{s} = 1} = p_{00} + \frac{p_{01}\bcancel{p_{10}(m)}}{\bcancel{1-p_{11}(m)}} = 1
+	\frac{\partial B}{\partial s_1}\bigg|_{\mathbf{s} = 1} = p_{00} + \frac{p_{01}\bcancel{p_{10}(m)}}{\bcancel{1-p_{11}(m)}} = 1
 \end{equation}
 
 \begin{equation}\label{eq:av_time_gbn}
 	\begin{split}
-			\frac{\partial B}{\partial s_2}\bigg|_{\underline{s} = 1} &= p_{00} + p_{01}\bcancel{p_{10}(m)}\frac{(m+1)[1-p_{11}(m)]+mp_{11}(m)}{[1-p_{11}(m)]^{\bcancel{2}}}\\
+			\frac{\partial B}{\partial s_2}\bigg|_{\mathbf{s} = 1} &= p_{00} + p_{01}\bcancel{p_{10}(m)}\frac{(m+1)[1-p_{11}(m)]+mp_{11}(m)}{[1-p_{11}(m)]^{\bcancel{2}}}\\
 			&= p_{00} + \frac{p_{01}[m+1-p_{11}(m)]}{1-p_{11}(m)}\\
 			&= \frac{p_{00}p_{10}(m)+p_{01}m+p_{01}p_{10}(m)}{p_{10}(m)}\\
 			&= \frac{p_{10}(m)+mp_{01}}{p_{10}(m)}
@@ -408,7 +408,7 @@ We have simplified some terms since $p_{10}(m) = 1-p_{11}(m)$ and $p_{00} + p_{0
 
 The throughput of the system in \autoref{fig:gbn_mc_1state} represents the average number of successes per unit time, and is given by:
 
-\begin{equation}
+\begin{equation}\label{eq:thr_1state_gbn}
 	throughput = \frac{\text{average \# of success per transition}}{\text{average time per transition}} = \frac{p_{10}(m)}{p_{10}(m) + mp_{01}}
 \end{equation}
 
@@ -416,70 +416,194 @@ Where the numerator is \autoref{eq:av_succ_gbn} and the denominator is \autoref{
 
 We can see that, in terms of throughput, this version of Go Back N protocol have no difference with the original one, even if in this version packets are not retransmitted.
 
+Now we want to solve the 2-state system represented in \autoref{fig:gbn_mc_2state}(i.e. find its throughput).
+The correspondent transition probability matrix is:
+\begin{equation*}
+	\Psi(s_1,s_2) =
+	\begin{pmatrix}
+		p_{00}s_1s_2 & p_{01}s_2 \\
+		\frac{p_{10}(m)s_1s_2^m[1-(p_{11}(m)s_2^m)^N]}{1-p_{11}(m)s_2^m} & [p_{11}(m)s_2^m]^N
+	\end{pmatrix}
+\end{equation*}
+That calculated for $\mathbf{s} = 1$ become:
+
+\begin{equation*}
+	P =
+	\begin{pmatrix}
+		p_{00} & p_{01} \\
+		1-p_{11}^N(m) & p_{11}^N(m)
+	\end{pmatrix}
+\end{equation*}
+
+We take the derivative in respect of $s_1$:
+
+\begin{equation*}
+	\frac{\partial\Psi}{\partial s_1}\bigg|_{\mathbf{s} = 1} =
+	\begin{pmatrix}
+		p_{00} & 0\\
+		\frac{p_{10}(m)[1-p_{11}^N(m)]}{1-p_{11}(m)} & 0
+	\end{pmatrix} =
+	\begin{pmatrix}
+		p_{00} & 0\\
+		1-p_{11}^N(m) & 0
+	\end{pmatrix}
+\end{equation*}
+
+Summing the rows of $\frac{\partial\Psi}{\partial s_1}\bigg|_{\mathbf{s} = 1}$ we obtain:
+\begin{equation}
+	\mathbf{R} =
+	\begin{pmatrix}
+		p_{00} \\
+		1-p_{11}^N(m)
+	\end{pmatrix}
+\end{equation}
+
+Then the derivative in respect of $s_2$:
+\begin{equation*}
+	\frac{\partial\Psi}{\partial s_1}\bigg|_{\mathbf{s} = 1} =
+	\begin{pmatrix}
+		p_{00} & p_{01}\\
+		\frac{\partial}{\partial s_2}\beta_{10}\frac{1-\beta_{11}^N}{1-\beta_{11}} & mNp_{11}^N
+	\end{pmatrix}
+\end{equation*}
+
+Where instead of the derivative of $\beta_{10}\frac{1-\beta_{11}^N}{1-\beta_{11}}$, we can compute the one of $\beta_{10}\sum_{i=0}^{N-1}\beta_{11}^i$ as follows.
+
+\begin{equation*}
+	\frac{\partial}{\partial s_2}\bigg[\sum_{i=0}^{N-1}p_{10}(m)p_{11}^i(m)s_1s_2^{(i+1)m}\bigg] = \sum_{i=0}^{N-1}p_{10}(m)p_{11}^i(m)s_1(i+1)ms_2^{(i+1)m-1}
+\end{equation*}
+
+That, calculated in $\mathbf{s} = 1$ become:
+
+\begin{equation*}
+	\begin{split}
+		\sum_{i=0}^{N-1}p_{10}(m)p_{11}^i(i+1)m &= mp_{10}(m)\sum_{i=0}^{N-1}(i+1)p_{11}^i(m) = \\
+		&=m\bcancel{p_{10}(m)}\frac{1-p_{11}^N(m)-Np_{11}^N(m)[1-p_{11}(m)]}{[1-p_{11}(m)]^{\bcancel{2}}}\\
+		&=m\frac{1-p_{11}^N(m)-Np_{11}^N(m)[1-p_{11}(m)]}{1-p_{11}(m)}
+	\end{split}
+\end{equation*}
+
+To compute $\mathbf{T}$, we have to sum the rows of the transition probability matrix. The result is the follows:
+
+\begin{equation}
+\mathbf{T} =
+	\begin{pmatrix}
+		1 \\
+		m\frac{1-p_{11}^N(m)}{1-p_{11}(m)}
+	\end{pmatrix}
+\end{equation}
+
+Then we can compute $\mathbf{\pi}$:
+
+\begin{equation}
+\mathbf{\pi} =
+	\begin{pmatrix}
+		\frac{1-p_{11}^N(m)}{1-p_{11}^N(m) + p_{01}} ,
+		\frac{p_{01}}{1-p_{11}^N(m) + p_{01}}
+	\end{pmatrix}
+\end{equation}
+
+Finally we compute the throughput as:
+
+\begin{equation}
+	\begin{split}
+	\frac{\mathbf{\pi}\cdot\mathbf{R}}{\mathbf{\pi}\cdot\mathbf{T}} &=
+	\frac{(1-p_{11}^N(m))p_{00} + p_{01}(1-p_{11}^N(m))}{1-p_{11}^N(m) + p_{01}m\frac{1-p_{11}^N(m)}{1-p_{11}(m)}} = \\
+	&= \frac{1}{1+ \frac{p_{01}m}{p_{10}(m)}} = \frac{p_{10}(m)}{p_{10}(m) + mp_{01}}
+	\end{split}
+\end{equation}
+
+Note that the result is the same of \autoref{eq:thr_1state_gbn}, this prove that the two system are equivalent.
 %%%BEGINNING LECTURE 26/05
 %%%GRAPH FROM PREVIOUS LECTURE MISSING
 
-We proceed now to the calculation of the throughput of the three state Markov chain:
-$$\Psi(s_1,s_2)=
+We proceed now to the calculation of the throughput of the three state Markov chain in \autoref{fig:gbn_mc_3state}. The transition probability with $\mathbf{s} = 1$ is:
+$$P=
 \begin{pmatrix}
 		p_{00} & p_{01} & 0 \\
-		1-p_{11}(m)^{N-1} & 0 & p_{11}(m)^{N-1} \\
+		1-p_{11}^{N-1}(m) & 0 & p_{11}^{N-1}(m) \\
 		p_{11}(m) & p_{11} & 0
 \end{pmatrix} $$
 By solving the system $\mathbf{\pi} = \mathbf{\pi}P$ it is possible to find
-$$\mathbf{\pi} \hspace{0.25 cm} \alpha \hspace{0.25cm} (\frac{1-p_{11}(m)^{N}}{p_{01}},1,1-p_{11}(m)^{N-1})$$
+$$
+	\mathbf{\pi} \propto
+	\begin{pmatrix}
+		\frac{1-p_{11}^N(m)}{p_{01}} , 1 , 1-p_{11}^{N-1}(m)
+	\end{pmatrix}
+$$
 It is  possible to find the exact values by dividing those numbers by their sum. From the previous analysis we know that
 $$\mathbf{R} =
 \begin{pmatrix}
 		p_{00}\\
-	  1-p_{11}(m)^{N-1} \\
+	  1-p_{11}^{N-1}(m) \\
 		1-p_{11}(m)
 \end{pmatrix} \hspace{1 cm}
 \mathbf{T} =
 \begin{pmatrix}
 		1 \\
-		m \frac{1-p_{11}(m)^{N-1}}{1-p_{11}(m)} \\
+		m \frac{1-p_{11}^{N-1}(m)}{1-p_{11}(m)} \\
 		m
 \end{pmatrix} $$
 $\mathbf{\pi}$ will still be proportional to the previous result we find even if we multiply all the  terms by the same number. If we multiply all the terms by $p_{01}$ it is easier to perform the calculation:
 \begin{equation}
 	\begin{split}
-		\mathbf{\pi}R \hspace{0.25 cm} \alpha &  \hspace{0.25cm}  (1-p_{11}(m)^{N})p_{00} + p_{01}1-p_{11}(m)^{N-1} + p_{01}p_{11}(m)^{N-1}(1-p_{11}(m))\\
-		= & \hspace{0.25cm} 1 + p_{11}(m)^N
+		\mathbf{\pi}\mathbf{R} &\propto  (1-p_{11}^N(m))p_{00} + p_{01}1-p_{11}^{N-1}(m) + p_{01}p_{11}^{N-1}(m)(1-p_{11}(m))\\
+		&= 1 + p_{11}^N(m)
 	\end{split}
 \end{equation}
 And
 \begin{equation}
 	\begin{split}
-		\mathbf{\pi}T \hspace{0.25 cm} \alpha &  \hspace{0.25cm}  (1-p_{11}(m)^{N}) + p_{01}m\frac{1-p_{11}(m)^{N-1}}{1-p_{11}(m)} + p_{01}p_{11}(m)^{N-1}m\\
-		= & \hspace{0.25cm} \frac{(1 + p_{11}(m)^N)(1-p_{11}(m))+mp_{01}(1-p_{11}(m)^N)}{1-p_{11}(m)}
+		\mathbf{\pi}\mathbf{T} &\propto (1-p_{11}^N(m)) + p_{01}m\frac{1-p_{11}^{N-1}(m)}{1-p_{11}(m)} + p_{01}p_{11}^{N-1}(m)m\\
+		&=\frac{(1 + p_{11}^N(m))(1-p_{11}(m))+mp_{01}(1-p_{11}^N(m))}{1-p_{11}(m)}
 	\end{split}
 \end{equation}
 Therefore:
 \begin{equation}
-		\frac{\mathbf{\pi}R}{\mathbf{\pi}T} = \frac{1-p_{11}(m)}{1-p_{11}(m)+ mp_{01}}
+		\frac{\mathbf{\pi}\mathbf{R}}{\mathbf{\pi}\mathbf{R}} = \frac{1-p_{11}(m)}{1-p_{11}(m)+ mp_{01}}
 \end{equation}
+
+Also in this case, the throughput remains the same.
+
+\begin{figure}[h]
+	\begin{center}
+		\begin{tikzpicture}[->, >=stealth, auto, thin, node distance=3.5cm]
+			\tikzstyle{every state}=[fill=white,draw=black,thin,text=black,scale=1]
+			\node[state]		(G)											{$G$};
+			\node[state]		(B_N)[right of=G]				{$B_N$};
+			\path
+			(G) 		edge[loop left]		 			node{$\beta_{00}$}				(G)
+							edge[loop above]		 			node{$\beta_{10}\beta_{BG}$}				(G)
+							edge[bend left]		 			node{$\beta_{01}\beta_{11}^{N-1}$}		 		(B_N)
+			(B_N)		edge[bend left]	node{$\beta_{10} + \beta_{11}\beta_{BG}$}				(G)
+							edge[loop right]					node{$\beta_{11}^{N}$}	(B_N);
+
+		\end{tikzpicture}
+	\end{center}
+	\caption{\autoref{fig:gbn_mc_3state} after removing $B_1$.}
+	\label{fig:gbn_mc_nob1}
+\end{figure}
 
 To remove $B_1$ I have to account for all the transitions coming from and going to it: \\
 %%%GRAPH MISSING
 $$P =
 \begin{pmatrix}
-		1-p_{01}p_{11}(m)^{N-1} & p_{01}p_{11}(m)^{N-1} \\
-		1-p_{11}(m)^N & p_{11}(m)^N
+		1-p_{01}p_{11}^{N-1}(m) & p_{01}p_{11}^{N-1}(m) \\
+		1-p_{11}^N(m) & p_{11}^N(m)
 \end{pmatrix}$$
-We can find $\Psi$, T, R and to the calculations we did before. \\
+We can find $\Psi$, \textbf{T}, \textbf{R} and to the calculations we did before. \\
 How to find the probability that a packet is dropped?
 Assign a label to the transmission, such that every time a packet is generated counts how many packets have been transmitted and how many packets have been dropped.
 $$\Psi=
 \begin{pmatrix}
-	 (1- p_{00}p_{11}(m)^{N-1})s_3 & p_{01}p_{11}(m)^{N-1}s_3s_4 \\
-	 (1- p_{11}(m)^{N-1})s_3 & p_{11}(m)^{N-1}s_3s_4 \\
+	 (1- p_{00}p_{11}^{N-1}(m))s_3 & p_{01}p_{11}^{N-1}(m)s_3s_4 \\
+	 (1- p_{11}^{N-1}(m))s_3 & p_{11}^{N-1}(m)s_3s_4 \\
 \end{pmatrix} $$
-Where $s_3 =$ new packets, $s_4 =$ packet drops. Then $\mathbf{\pi} \hspace{0.25cm} \alpha \hspace{0.25cm} (1-p_{11}(m)^N,p_{01}p_{11}(m)^{N-1})$.
-Therefore Drop $= \begin{pmatrix} p_{01}p_{11}(m)^{N-1} \\ p_{11}(m)^N \end{pmatrix}$ and pkts $= \begin{pmatrix} 1 \\ 1 \end{pmatrix}$.\\
+Where $s_3 =$ new packets, $s_4 =$ packet drops. Then $\mathbf{\pi} \propto (1-p_{11}^N(m),p_{01}p_{11}^{N-1}(m))$.
+Therefore Drop $= \begin{pmatrix} p_{01}p_{11}^{N-1}(m) \\ p_{11}^N(m) \end{pmatrix}$ and pkts $= \begin{pmatrix} 1 \\ 1 \end{pmatrix}$.\\
 The probability can then be computed as:
 \begin{equation}
-	P_{\text{drop}} = \frac{p_{01}p_{11}(m)^{N-1}}{1-p_{11}(m)^N + p_{01}p_{11}(m)^{N-1}}
+	P_{\text{drop}} = \frac{p_{01}p_{11}^{N-1}(m)}{1-p_{11}^N(m) + p_{01}p_{11}^{N-1}(m)}
 \end{equation}
 %Probabilistic way to find the same result?
 First passage function:
@@ -513,5 +637,18 @@ Using the equation $\theta_{ij}(\textbf{s}) = \sum_{k \neq j} \Psi_{ik}(\textbf{
 		\theta_{10} = & \frac{\beta_{BG} + \beta_{11}^{N-1}\beta_{10}}{1- \beta_{11}^N}
 	\end{split}
 \end{equation*}
-%%%DRAWINGS MISSING
+
+\begin{figure}[h]
+	\begin{center}
+		\begin{tikzpicture}[->, >=stealth, auto, thin, node distance=3.5cm]
+			\tikzstyle{every state}=[fill=white,draw=black,thin,text=black,scale=1]
+			\node[state]		(G)											{$G$};
+			\node[state]		(B_N)[right of=G]				{$B_N$};
+			\path
+			(G) 	edge[bend left]	node{$\theta_{02}$}	(B_N)
+			(B_N)	edge[bend left]	node{$\theta_{20}$}	(G);
+		\end{tikzpicture}
+	\end{center}
+\end{figure}
+
 The chains are different from the ones of the previous cases considered, the reason for that is the fact that they have different meanings. In fact, in this case, we required to pass through the state BN before going to G.
