fix typo and add an image

--- a/network_modeling/network_modeling.tex
+++ b/network_modeling/network_modeling.tex
@@ -139,7 +139,7 @@
 \includegraphics[width=9cm]{Zorzilla}\\
 \vspace{0.5cm}
 {written with love by\par}
-{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Davide Peron, Umberto Martinelli, Federico Mason, Lorenza Prospero, Ciprian Matteo\par}
+{\Large Ettore Mariotti, Andrea Pittaro, Enrico Lovisotto, Cristina Gava, Davide Peron, Umberto Martinelli, Federico Mason, Lorenza Prospero, Ciprian Matteo\par}
 %\vspace{0.2cm} \linespread{1} \scshape{\large{\bfseries{(subtitle)}}}
 \end{center}
 
